서영현:2차 2주차 코딩 마스터스 코드

--- a/SeoYoungHyun/2차 코딩마스터스/중급.md
+++ b/SeoYoungHyun/2차 코딩마스터스/중급.md
@@ -270,3 +270,122 @@ bracelet1 = input().strip()
 bracelet2 = input().strip()
 
 print(are_bracelets_same(bracelet1, bracelet2))
+
+## 13) 산책길
+def count_paths(N):
+    directions = [(0, 1), (1, 0), (0, -1), (-1, 0)]
+    visited = set()
+
+    def dfs(x, y, direction, steps):
+        if steps == N:
+            return 1
+
+        count = 0
+        visited.add((x, y))
+
+        new_direction = (direction + 3) % 4
+        new_x = x + directions[new_direction][0]
+        new_y = y + directions[new_direction][1]
+        if (new_x, new_y) not in visited:
+            count += dfs(new_x, new_y, new_direction, steps + 1)
+
+        new_direction = (direction + 1) % 4
+        new_x = x + directions[new_direction][0]
+        new_y = y + directions[new_direction][1]
+        if (new_x, new_y) not in visited:
+            count += dfs(new_x, new_y, new_direction, steps + 1)
+
+        visited.remove((x, y))
+        return count
+
+    return dfs(0, 0, 0, 0)
+
+N = int(input().strip())
+print(int(count_paths(N)/2))
+
+## 14) Not In My BackYard
+def find_optimal_incinerator_location(N, K, houses):
+    houses.sort()
+    max_satisfaction = float('-inf')
+    best_location = float('inf')
+    
+    for location in houses:
+        satisfaction = 0
+        for house in houses:
+            distance = abs(house - location)
+            if distance <= K:
+                satisfaction += distance
+            else:
+                satisfaction -= distance
+        
+        if satisfaction > max_satisfaction:
+            max_satisfaction = satisfaction
+            best_location = location
+        elif satisfaction == max_satisfaction:
+            best_location = min(best_location, location)
+    
+    return best_location
+
+N, K = map(int, input().split())
+houses = list(map(int, input().split()))
+print(find_optimal_incinerator_location(N, K, houses))
+
+## 15) 싱크홀
+def min_planks(n, k, holes):
+    holes.sort()
+    planks = 0
+    i = 0
+
+    while i < n:
+        start = holes[i]
+        end = start + k - 1
+
+        while i < n and holes[i] <= end:
+            i += 1
+
+        planks += 1
+
+    return planks
+
+
+n, k = map(int, input().split())
+holes = list(map(int, input().split()))
+print(min_planks(n, k, holes))
+
+## 16) 블로그
+def max_average_start_day(n, k, visitors):
+    current_sum = sum(visitors[:k])
+    max_sum = current_sum
+    max_start_day = 0
+
+    for i in range(1, n - k + 1):
+        current_sum = current_sum - visitors[i - 1] + visitors[i + k - 1]
+        if current_sum > max_sum:
+            max_sum = current_sum
+            max_start_day = i
+
+    return max_start_day + 1  # 1-based index
+
+n, k = map(int, input().split())
+visitors = list(map(int, input().split()))
+print(max_average_start_day(n, k, visitors))
+
+## 17) 알람 맞추기
+def alarm_time(start_time, n):
+    hh, mm = map(int, start_time.split(':'))
+    start_minutes = hh * 60 + mm
+    total_extra_minutes = (n - 1) * n // 2
+    total_minutes = start_minutes + total_extra_minutes
+    final_hour = (total_minutes // 60) % 24
+    final_minute = total_minutes % 60
+    return f"{final_hour:02}:{final_minute:02}"
+
+start_time = input()
+n = int(input())
+print(alarm_time(start_time, n))
+
+## 18) 소수를 세자
+
+## 19) 장치 연결하기
+
+## 20) 게시판 관리자
