--- a/SeoYoungHyun/2차 코딩마스터스/초급.md
+++ b/SeoYoungHyun/2차 코딩마스터스/초급.md
@@ -62,3 +62,201 @@ a, b, c = map(int, input().split())
 B_rotation = 10 * c / b
 A_rotation = math.ceil(B_rotation * b / a)
 print(A_rotation)
+
+## 9) 전화번호 입력
+import re
+
+S = input().strip()
+
+pattern = r"^010-\d{4}-\d{4}$"
+
+if re.match(pattern, S):
+    print("valid")
+else:
+    print("invalid")
+
+## 10) 그룹 ID
+from collections import defaultdict, deque
+
+N, M = map(int, input().split())
+
+graph = defaultdict(list)
+
+for _ in range(M):
+    u, v = map(int, input().split())
+    graph[u].append(v)
+    graph[v].append(u)
+
+visited = [False] * (N + 1)
+
+def bfs(start):
+    queue = deque([start])
+    visited[start] = True
+    group = [start]
+    
+    while queue:
+        node = queue.popleft()
+        for neighbor in graph[node]:
+            if not visited[neighbor]:
+                visited[neighbor] = True
+                queue.append(neighbor)
+                group.append(neighbor)
+    
+    return group
+
+groups = []
+
+for i in range(1, N + 1):
+    if not visited[i]:
+        group = bfs(i)
+        groups.append(group)
+
+max_group = max(groups, key=lambda x: (len(x), -min(x)))
+print(min(max_group))
+
+## 11) 선물
+import math
+from functools import reduce
+
+def gcd(a, b):
+    return math.gcd(a, b)
+
+N = int(input().strip())
+a = list(map(int, input().split()))
+
+max_children = reduce(gcd, a)
+
+print(max_children)
+
+## 12) 방향 추적
+N = int(input().strip())
+positions = []
+
+for _ in range(N):
+    y, x = map(int, input().split())
+    positions.append((y, x))
+
+results = []
+for i in range(1, N):
+    prev_y, prev_x = positions[i - 1]
+    curr_y, curr_x = positions[i]
+
+    if curr_y > prev_y:
+        direction = 1
+        distance = curr_y - prev_y
+    elif curr_y < prev_y:
+        direction = 3
+        distance = prev_y - curr_y
+    elif curr_x > prev_x:
+        direction = 2
+        distance = curr_x - prev_x
+    elif curr_x < prev_x:
+        direction = 4
+        distance = prev_x - curr_x
+
+    results.append((direction, distance))
+
+for direction, distance in results:
+    print(direction, distance)
+
+## 13) 야바위
+N, M = map(int, input().split())
+cups = list(range(1, N + 1))
+
+for _ in range(M):
+    A, B = map(int, input().split())
+    cups[A - 1], cups[B - 1] = cups[B - 1], cups[A - 1]
+
+initial_ball_cup = int(input().strip())
+
+final_position = cups.index(initial_ball_cup) + 1
+
+print(final_position)
+
+## 14) 묵찌빠 봇
+def determine_winner(bot1, bot2):
+    def rps_winner(move1, move2):
+        if move1 == move2:
+            return 0
+        elif (move1 == 1 and move2 == 3) or (move1 == 2 and move2 == 1) or (move1 == 3 and move2 == 2):
+            return 1
+        else:
+            return 2
+
+    len1, len2 = len(bot1), len(bot2)
+    max_rounds = 1000
+    round_count = 0
+
+    index1, index2 = 0, 0
+    while True:
+        move1, move2 = bot1[index1 % len1], bot2[index2 % len2]
+        winner = rps_winner(move1, move2)
+        if winner != 0:
+            current_turn = winner
+            break
+        index1 += 1
+        index2 += 1
+
+    while round_count < max_rounds:
+        round_count += 1
+        move1, move2 = bot1[index1 % len1], bot2[index2 % len2]
+        winner = rps_winner(move1, move2)
+
+        if winner == 0:
+            return current_turn
+        elif winner == current_turn:
+            pass
+        else:
+            current_turn = 3 - current_turn
+
+        index1 += 1
+        index2 += 1
+
+    return 0
+
+N, M = map(int, input().split())
+bot1 = list(map(int, input().split()))
+bot2 = list(map(int, input().split()))
+
+result = determine_winner(bot1, bot2)
+print(result)
+
+## 15) 회색조
+hex_code = input().strip()
+
+red = int(hex_code[1:3], 16)
+green = int(hex_code[3:5], 16)
+blue = int(hex_code[5:7], 16)
+
+avg = round((red + green + blue) / 3)
+
+gray_hex = f"#{avg:02X}{avg:02X}{avg:02X}"
+
+print(gray_hex)
+
+## 16) 최댓값 연산
+x, y, z = map(int, input().split())
+
+if z == y or z == x:
+    print("possible")
+else:
+    print("impossible")
+
+## 17) 그림 감상
+grid = [input().strip() for _ in range(4)]
+
+def a(grid):
+    for i in range(3):
+        for j in range(3):
+            sub_grid = [grid[i][j], grid[i][j+1], grid[i+1][j], grid[i+1][j+1]]
+            x_count = sub_grid.count('X')
+            if x_count == 4:
+                return True
+            elif x_count == 3:
+                return True
+    return False
+
+if a(grid):
+    print("yes")
+else:
+    print("no")
