서영현: 3주차 학습

--- a/SeoYoungHyun/2차 코딩마스터스/초급.md
+++ b/SeoYoungHyun/2차 코딩마스터스/초급.md
@@ -53,7 +53,41 @@ def f(j,n,h):
 j=input().strip();n=int(input().strip());h=set(tuple(map(int,input().strip().split()))for _ in range(n));r,b,k=f(j,n,h)
 for i in range(10):print(r[i],b[i],k[i])
 
-## 7) 법인 등록 번호
+## 7) 법인 등록 번호 <small>일부 케이스 미통과</small>
+import sys
+
+def validate_corporation_type(sum_even, sum_odd, errtestnumber):
+    results = ["X", "X", "X", "X", "X"]
+    for a in range(1, 7):
+        for b in range(1, 9):
+            calculated_value = 10 - (2 * (sum_even + a) + sum_odd + b) % 10
+            if calculated_value == errtestnumber:
+                value = 10 * b + a
+                if 11 <= value <= 15:
+                    results[0] = "O"
+                if 21 <= value <= 22:
+                    results[1] = "O"
+                if 31 <= value <= 51:
+                    results[2] = "O"
+                if 81 <= value <= 86:
+                    results[3] = "O"
+                if value == 71:
+                    results[4] = "O"
+    return "".join(results)
+
+def process_corporate_number(firstnumber, secondnumber, errtestnumber):
+    firstnumber_list = [int(digit) for digit in firstnumber]
+    secondnumber_list = [int(digit) for digit in secondnumber]
+    result_list = firstnumber_list + secondnumber_list
+    sum_odd = sum(result_list[i] for i in range(len(result_list)) if i % 2 == 0)
+    sum_even = sum(result_list[i] for i in range(len(result_list)) if i % 2 == 1)
+    return validate_corporation_type(sum_even, sum_odd, errtestnumber)
+    
+firstnumber = sys.stdin.readline().strip()
+secondnumber = sys.stdin.readline().strip()
+errtestnumber = int(sys.stdin.readline())
+
+print(process_corporate_number(firstnumber, secondnumber, errtestnumber))
 
 ## 8) 톱니바퀴
 import math
