서영현:4주차 학습

--- a/SeoYoungHyun/2차 코딩마스터스/중급.md
+++ b/SeoYoungHyun/2차 코딩마스터스/중급.md
@@ -387,5 +387,88 @@ print(alarm_time(start_time, n))
 ## 18) 소수를 세자
 
 ## 19) 장치 연결하기
+from itertools import combinations
 
-## 20) 게시판 관리자
+def solve(N, constraints):
+    def is_valid(types):
+        for i in range(N):
+            r_expected, b_expected = constraints[i]
+            r_count = sum(types[j] == "RED" for j in range(N) if adj[i][j])
+            b_count = sum(types[j] == "BLUE" for j in range(N) if adj[i][j])
+            if r_expected != -1 and r_count != r_expected:
+                return False
+            if b_expected != -1 and b_count != b_expected:
+                return False
+        return True
+
+    def backtrack(idx, edge_count):
+        nonlocal min_edges, valid_ways
+        if edge_count > min_edges:
+            return
+        if idx == len(edges):
+            if is_valid(types):
+                if edge_count < min_edges:
+                    min_edges = edge_count
+                    valid_ways = 1
+                elif edge_count == min_edges:
+                    valid_ways += 1
+            return
+
+        u, v = edges[idx]
+        adj[u][v] = adj[v][u] = True
+        backtrack(idx + 1, edge_count + 1)
+        adj[u][v] = adj[v][u] = False
+        backtrack(idx + 1, edge_count)
+
+    min_edges = float("inf")
+    valid_ways = 0
+    edges = [(i, j) for i in range(N) for j in range(i + 1, N)]
+    adj = [[False] * N for _ in range(N)]
+
+    for mask in range(1 << N):
+        types = [("RED" if (mask >> i) & 1 else "BLUE") for i in range(N)]
+        backtrack(0, 0)
+
+    if min_edges == float("inf"):
+        return -1, 0
+    return min_edges, valid_ways
+
+N = int(input())
+constraints = [tuple(map(int, input().split())) for _ in range(N)]
+
+min_edges, valid_ways = solve(N, constraints)
+
+if min_edges == -1:
+    print(-1)
+else:
+    print(min_edges)
+    print(valid_ways)
+
+## 20) 게시판 관리자 - 다시 풀어야 함
+from collections import Counter
+from itertools import permutations
+
+def count_correct_sentences(sentence1, sentence2):
+    words1 = sentence1.split()
+    words2 = sentence2.split()
+    
+    if sorted(words1) != sorted(words2):
+        return 0
+    
+    valid_count = 0
+    for perm in permutations(words1):
+        perm_sentence = " ".join(perm)
+        if (
+            sorted(perm_sentence.split()) == sorted(sentence1.split()) and
+            sorted(perm_sentence.split()) == sorted(sentence2.split())
+        ):
+            valid_count += 1
+    
+    return valid_count // 2
+
+n = int(input().strip())
+sentence1 = input().strip()
+sentence2 = input().strip()
+
+result = count_correct_sentences(sentence1, sentence2)
+print(result)
