--- a/SeoYoungHyun/2차 코딩마스터스/초급.md
+++ b/SeoYoungHyun/2차 코딩마스터스/초급.md
@@ -53,41 +53,7 @@ def f(j,n,h):
 j=input().strip();n=int(input().strip());h=set(tuple(map(int,input().strip().split()))for _ in range(n));r,b,k=f(j,n,h)
 for i in range(10):print(r[i],b[i],k[i])
 
-## 7) 법인 등록 번호 <small>일부 케이스 미통과</small>
-import sys
-
-def validate_corporation_type(sum_even, sum_odd, errtestnumber):
-    results = ["X", "X", "X", "X", "X"]
-    for a in range(1, 7):
-        for b in range(1, 9):
-            calculated_value = 10 - (2 * (sum_even + a) + sum_odd + b) % 10
-            if calculated_value == errtestnumber:
-                value = 10 * b + a
-                if 11 <= value <= 15:
-                    results[0] = "O"
-                if 21 <= value <= 22:
-                    results[1] = "O"
-                if 31 <= value <= 51:
-                    results[2] = "O"
-                if 81 <= value <= 86:
-                    results[3] = "O"
-                if value == 71:
-                    results[4] = "O"
-    return "".join(results)
-
-def process_corporate_number(firstnumber, secondnumber, errtestnumber):
-    firstnumber_list = [int(digit) for digit in firstnumber]
-    secondnumber_list = [int(digit) for digit in secondnumber]
-    result_list = firstnumber_list + secondnumber_list
-    sum_odd = sum(result_list[i] for i in range(len(result_list)) if i % 2 == 0)
-    sum_even = sum(result_list[i] for i in range(len(result_list)) if i % 2 == 1)
-    return validate_corporation_type(sum_even, sum_odd, errtestnumber)
-    
-firstnumber = sys.stdin.readline().strip()
-secondnumber = sys.stdin.readline().strip()
-errtestnumber = int(sys.stdin.readline())
-
-print(process_corporate_number(firstnumber, secondnumber, errtestnumber))
+## 7) 법인 등록 번호
 
 ## 8) 톱니바퀴
 import math
@@ -294,3 +260,90 @@ if a(grid):
     print("yes")
 else:
     print("no")
+
+## 18) 마법의 지팡이
+from collections import deque
+
+def min_wand_uses(N):
+    if N == 1:
+        return 0
+
+    visited = set()
+    queue = deque([(N, 0)])
+    
+    while queue:
+        current, steps = queue.popleft()
+        
+        if current == 1:
+            return steps
+        
+        if current in visited:
+            continue
+        visited.add(current)
+        
+        if current % 2 == 0:
+            queue.append((current // 2, steps + 1))
+        if current % 3 == 0:
+            queue.append((current // 3 * 2, steps + 1))
+        if current % 5 == 0:
+            queue.append((current // 5 * 4, steps + 1))
+    
+    return -1
+
+N = int(input())
+result = min_wand_uses(N)
+print(result)
+
+## 19) 유사 소수 분할 - 다시 풀어야함
+def is_prime(n):
+    if n < 2:
+        return False
+    for i in range(2, int(n ** 0.5) + 1):
+        if n % i == 0:
+            return False
+    return True
+
+def generate_pseudo_primes(limit):
+    primes = [i for i in range(2, int(limit ** 0.5) + 1) if is_prime(i)]
+    pseudo_primes = set()
+    for i in range(len(primes)):
+        for j in range(i + 1, len(primes)):
+            product = primes[i] * primes[j]
+            if product > limit:
+                break
+            pseudo_primes.add(product)
+    return pseudo_primes
+
+def can_split_into_pseudo_primes(N):
+    pseudo_primes = generate_pseudo_primes(N)
+    pseudo_primes_list = sorted(pseudo_primes)
+
+    for a in pseudo_primes_list:
+        for b in pseudo_primes_list:
+            if a + b >= N or a == b:
+                continue
+            for c in pseudo_primes_list:
+                if a + b + c >= N or b == c or a == c:
+                    continue
+                d = N - (a + b + c)
+                if d > 0 and len({a, b, c, d}) == 4:
+                    pseudo_count = sum(x in pseudo_primes for x in [a, b, c, d])
+                    if pseudo_count >= 3:
+                        return "possible"
+    return "impossible"
+
+N = int(input())
+result = can_split_into_pseudo_primes(N)
+print(result)
+
+## 20) 떨어진 숫자
+def check_numbers(original, picked_up):
+    if sorted(original) == sorted(picked_up):
+        return "YES"
+    else:
+        return "NO"
+
+original = input().strip()
+picked_up = input().strip()
+
+print(check_numbers(original, picked_up))
